@@ -1,3 +1,8 @@
+2008-09-24  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3mhack.el (w3mhack-makeinfo): Remove Emacs 19 stuff; remove TeX
+	directives first; don't call texinfo-mode.
+
 2008-09-21  Akinori MUSHA  <knu@iDaemons.org>
 
 	* doc/emacs-w3m.texi (Image Variables): Fix syntax error.
